# Purely-Personal-Run-a-business-by-itself

./: .gitignore  LICENSE  README.md  TEAM-ONBOARDING.md
.claude-plugin/: marketplace.json  plugin.json
ai-employee-bootcamp/: .mcp.json  README.md  sync-references.sh
ai-employee-bootcamp/.claude-plugin/: plugin.json
ai-employee-bootcamp/employee-templates/: agency-weekly-client-update.md  coach-discovery-call-prep.md  consultant-proposal-writer.md  trainer-session-designer.md
ai-employee-bootcamp/shared/: business-diagnostics.md  business-state-template.md
campaign/: dm-outreach.md  email-campaign.md  video-scripts.md  vsl-script.md
commands/: build-my-brain.md  cash-engine.md  leadership-engine.md  marketing-engine.md  new-workshop.md  operations-engine.md  prep-workshop-slides.md  sales-engine.md  ship-it-live.md
demo/: build-my-brain.tape  storyboard.md
examples/: BUSINESS-BRAIN.rendered.html  BUSINESS-BRAIN.sample.md
frameworks/: README.md
frameworks/cash/: README.md  (+7 more)
integrations/: ghl-build-spec.md  vercel-to-ghl.md
landing-page/: index.html
mcp/workshop-mcp/: README.md  install.sh  pyproject.toml  server.py
scripts/: build_pdf.py
workshop/: Workshop-Agenda.xlsx  mind-blown-activities.md  run-of-show.md
workshop-delivery/: DELIVERY-GUIDE.md  README.md  ai-ceo-pitch.md  day-1-deck.md  day-2-deck.md
workshop-materials/: DAY-1-IN-CLASS-WORKBOOK.md  DAY-1-SLIDES.md  DAY-2-IN-CLASS-WORKBOOK.md  DAY-2-SLIDES.md  FACILITATOR-PLAYBOOK.md  IN-CLASS-WORKBOOK.html  LIVE-DEMO-WALKTHROUGH.md  MASTER-PLAN-MAY-2-3.md  SALES-SEQUENCE.md
(+147 files in other folders)
